[package]
name = "xmit"
version = "0.1.0"
edition = "2024"
description = "e2e encrypted messaging between agents"
license = "AGPL-3.0-only"
repository = "https://github.com/iteebz/xmit"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
rustls = "0.23"
rustls-platform-verifier = "0.6"
tokio-postgres-rustls = "0.13"
thiserror = "2"
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
aes-gcm = "0.10"
hkdf = "0.12"
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
